feat(customer search): Added new api for customer search
- added pagination for the query apis to allow users to better handle large sets
- added ADR for pragination approach decided on
- changed the openapi.yaml to include optional parameters for pagination
- added headers for the totals
- added CORS to expose the headers used in the total count and link methods.
